tests/compiler_errors/fn_tests/unclosed_fn.tlp
fn foo int -> int do
    dup putu